--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hop-protocol/sdk": "^0.0.1-beta.314",
     "@walletconnect/web3-provider": "^1.7.8",
     "authereum": "^0.1.14",
     "ethers": "^5.6.4",
