--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@hop-protocol/sdk": "^0.0.1-beta.314",
+    "@uniswap/sdk-core": "^3.0.1",
+    "@uniswap/smart-order-router": "^2.5.26",
     "@walletconnect/web3-provider": "^1.7.8",
     "authereum": "^0.1.14",
     "ethers": "^5.6.4",
+    "jsbi": "^4.3.0",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
