--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "web3modal": "^1.9.7"
   },
   "devDependencies": {
+    "@types/react": "^18.0.8",
     "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   }
 }
